--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Нотификације о вестима</string>
-    <string name="action_settings">Подешавања</string>
+    <string name="app_name">Notifikacije Mašisnki</string>
+    <string name="action_settings">Podešavanja</string>
     <string name="openDrawer">Open Drawer </string>
     <string name="closeDrawer">Close Drawer </string>
 
@@ -8,4 +8,39 @@
     <string name="grid_layout_manager">Grid Layout Manager</string>
     <string name="linear_layout_manager">Linear Layout Manager</string>
     <string name="empty_vesti">Nemate novih vesti.</string>
+    <string name="title_activity_settings">Settings</string>
+
+    <!-- Strings related to Settings -->
+
+    <!-- Example General settings -->
+    <string name="pref_header_general">Opšte</string>
+
+    <string name="pref_title_social_recommendations">Test</string>
+    <string name="pref_description_social_recommendations">test
+    </string>
+
+    <!--<string name="pref_title_display_name">Display name</string>-->
+    <!--<string name="pref_default_display_name">John Smith</string>-->
+
+    <!--<string name="pref_title_add_friends_to_messages">Add friends to messages</string>-->
+    <!--<string-array name="pref_example_list_titles">-->
+        <!--<item>Always</item>-->
+        <!--<item>When possible</item>-->
+        <!--<item>Never</item>-->
+    <!--</string-array>-->
+    <!--<string-array name="pref_example_list_values">-->
+        <!--<item>1</item>-->
+        <!--<item>0</item>-->
+        <!--<item>-1</item>-->
+    <!--</string-array>-->
+
+    <!-- Example settings for Notifications -->
+    <string name="pref_header_notifications">Notifikacije</string>
+
+    <string name="pref_title_new_message_notifications">Nove notifikacije o vestima</string>
+
+    <string name="pref_title_ringtone">Zvuk poruke</string>
+    <string name="pref_ringtone_silent">Silent</string>
+
+    <string name="pref_title_vibrate">Vibracija</string>
 </resources>
