--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,9 +56,9 @@
 
     <string name="about_tekst3">Obeležite predmete za koje želite da primate notifikacije i dodirnite dugme <b>&quot;Sačuvaj&quot;</b>.
         Kada se objavi nova vest, stići će vam notifikacija. Ukoliko je ne otvorite, već želite da pogledate kasnije, vest će biti zapisana na tabu <b>&quot;Vesti&quot;</b>.
-        \n\nTab &quot;<b>Istorija</b>&quot; sadrži poslednjih 15 vesti, Bez obzira na to da li ste ih pročitali ili ne.</string>
+        \n\nTab &quot;<b>Istorija</b>&quot; sadrži poslednjih 30 vesti, Bez obzira na to da li ste ih pročitali ili ne.</string>
 
-    <string name="about_tekst4"><b>Autori aplikacije:\n\nMilan Bosić\nNikola Šajković</b></string>
+    <string name="about_tekst4"><b>Autori aplikacije:\n\nVies Studios\n\nKontakt: viesstudios@gmail.com</b></string>
 
     <string name="drawer_header_1">Notifikacije Mašinski fakultet</string>
     <string name="drawer_header_2">Notifikacije o novim vestima</string>
