--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,27 +20,8 @@
         <item>Drugo</item>
     </string-array>
 
-    <!-- Strings related to Settings -->
-
-    <!-- Example General settings -->
     <string name="pref_header_general">Opšte</string>
 
-    <!--<string name="pref_title_display_name">Display name</string>-->
-    <!--<string name="pref_default_display_name">John Smith</string>-->
-
-    <!--<string name="pref_title_add_friends_to_messages">Add friends to messages</string>-->
-    <!--<string-array name="pref_example_list_titles">-->
-    <!--<item>Always</item>-->
-    <!--<item>When possible</item>-->
-    <!--<item>Never</item>-->
-    <!--</string-array>-->
-    <!--<string-array name="pref_example_list_values">-->
-    <!--<item>1</item>-->
-    <!--<item>0</item>-->
-    <!--<item>-1</item>-->
-    <!--</string-array>-->
-
-    <!-- Example settings for Notifications -->
     <string name="pref_header_notifications">Notifikacije</string>
 
     <string name="pref_title_new_message_notifications">Nove notifikacije o vestima</string>
@@ -65,4 +46,5 @@
     <string name="drawer_header_2">Notifikacije o novim vestima</string>
     <string name="save">Sačuvaj</string>
 
+    <string name="extra_string">toDelete</string>
 </resources>
